--- a/open_spiel_first_start.ipynb
+++ b/open_spiel_first_start.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "761ded41",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "printing the tic tac toe game object: tic_tac_toe()\n",
+      "printing the tic tac toe generator object: tic_tac_toe()\n",
       "number of players for tic tac toe: 2\n",
       "tic tac toe number of distinct actions is 9\n",
       "tic tac toe max history length is 9\n"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a2c19206",
    "metadata": {},
    "outputs": [
@@ -66,8 +66,103 @@
    ],
    "source": [
     "# create a new tic tac toe game\n",
-    "tic_tac_toe_game = tic_tac_toe_generator.new_initial_state()\n",
-    "print(f\"tic tac toe game:\\n{tic_tac_toe_game}\", )"
+    "ttt_current_state = tic_tac_toe_generator.new_initial_state()\n",
+    "print(f\"tic tac toe game:\\n{ttt_current_state}\", )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "20345088",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current player of the game: 0\n",
+      "Is this state terminal? False\n",
+      "Legal actions of the state: [0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Current player of the game:\", ttt_current_state.current_player())\n",
+    "print(f\"Is this state terminal? {ttt_current_state.is_terminal()}\")\n",
+    "print(f\"Legal actions of the state: {ttt_current_state.legal_actions()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "80968b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8bbbbbbbb\n",
+      "7bbbbbbbb\n",
+      "6........\n",
+      "5........\n",
+      "4........\n",
+      "3........\n",
+      "2wwwwwwww\n",
+      "1wwwwwwww\n",
+      " abcdefgh\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another game\n",
+    "breakthrough = pyspiel.load_game(\"breakthrough\")\n",
+    "breakthrough_current_state = breakthrough.new_initial_state()\n",
+    "print(breakthrough_current_state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f440f151",
+   "metadata": {},
+   "source": [
+    "# Trying out a Game Trajectory, via Kuhn Poker\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69091cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huh \n",
+      "short_name: kuhn_poker\n",
+      "long_name: Kuhn Poker\n",
+      "dynamics: Sequential\n",
+      "chance_mode: ExplicitStochastic\n",
+      "information: ImperfectInformation\n",
+      "utility: ZeroSum\n",
+      "reward_model: Terminal\n",
+      "max_num_players: 10\n",
+      "min_num_players: 2\n",
+      "provides_information_state_string: true\n",
+      "provides_information_state_tensor: true\n",
+      "provides_observation_string: true\n",
+      "provides_observation_tensor: true\n",
+      "provides_factored_observation_string: true\n",
+      "parameter_specification: players=kInt***2***false\n"
+     ]
+    }
+   ],
+   "source": [
+    "kuhn_poker = pyspiel.load_game(\"kuhn_poker\")\n",
+    "k_p_current_state = kuhn_poker.new_initial_state()\n",
+    "print(\"huh\", k_p_current_state)\n"
    ]
   }
  ],
