Moved onto the Rock Paper Scissors section of part 2 of the OpenSpiel Tutorial Python Notebook

--- a/open_spiel_first_start.ipynb
+++ b/open_spiel_first_start.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "80968b60",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,31 @@
       "2wwwwwwww\n",
       "1wwwwwwww\n",
       " abcdefgh\n",
-      "\n"
+      "\n",
+      "Number of legal actions in the game: 768\n",
+      "Number of legal actions in the initial state of breakthrough: 22\n",
+      "a7a6\n",
+      "a7b6\n",
+      "b7a6\n",
+      "b7b6\n",
+      "b7c6\n",
+      "c7b6\n",
+      "c7c6\n",
+      "c7d6\n",
+      "d7c6\n",
+      "d7d6\n",
+      "d7e6\n",
+      "e7d6\n",
+      "e7e6\n",
+      "e7f6\n",
+      "f7e6\n",
+      "f7f6\n",
+      "f7g6\n",
+      "g7f6\n",
+      "g7g6\n",
+      "g7h6\n",
+      "h7g6\n",
+      "h7h6\n"
      ]
     }
    ],
@@ -119,50 +143,77 @@
     "# Another game\n",
     "breakthrough = pyspiel.load_game(\"breakthrough\")\n",
     "breakthrough_current_state = breakthrough.new_initial_state()\n",
-    "print(breakthrough_current_state)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f440f151",
-   "metadata": {},
-   "source": [
-    "# Trying out a Game Trajectory, via Kuhn Poker\n"
+    "print(breakthrough_current_state)\n",
+    "\n",
+    "print(f\"Number of legal actions in the game: {breakthrough.num_distinct_actions()}\")\n",
+    "print(f\"Number of legal actions in the initial state of breakthrough: {len(breakthrough_current_state.legal_actions())}\")\n",
+    "for action in breakthrough_current_state.legal_actions():\n",
+    "  print(breakthrough_current_state.action_to_string(action))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69091cb1",
+   "execution_count": 39,
+   "id": "951a52a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huh \n",
-      "short_name: kuhn_poker\n",
-      "long_name: Kuhn Poker\n",
-      "dynamics: Sequential\n",
-      "chance_mode: ExplicitStochastic\n",
-      "information: ImperfectInformation\n",
-      "utility: ZeroSum\n",
-      "reward_model: Terminal\n",
-      "max_num_players: 10\n",
-      "min_num_players: 2\n",
-      "provides_information_state_string: true\n",
-      "provides_information_state_tensor: true\n",
-      "provides_observation_string: true\n",
-      "provides_observation_tensor: true\n",
-      "provides_factored_observation_string: true\n",
-      "parameter_specification: players=kInt***2***false\n"
+      "The name of our normal form game example: short_name()\n",
+      "Printing out the inital state of our normal form game: Terminal? false\n",
+      "Row actions: row0 row1 \n",
+      "Col actions: col0 col1 \n",
+      "Utility matrix:\n",
+      "1,-1 -1,1 \n",
+      "-1,1 1,-1 \n",
+      "\n",
+      "False\n",
+      "Terminal? true\n",
+      "History: 0, 1\n",
+      "Returns: -1,1\n",
+      "Row actions: \n",
+      "Col actions: \n",
+      "Utility matrix:\n",
+      "1,-1 -1,1 \n",
+      "-1,1 1,-1 \n",
+      "\n",
+      "[-1.0, 1.0]\n"
      ]
     }
    ],
    "source": [
-    "kuhn_poker = pyspiel.load_game(\"kuhn_poker\")\n",
-    "k_p_current_state = kuhn_poker.new_initial_state()\n",
-    "print(\"huh\", k_p_current_state)\n"
+    "\n",
+    "normal_form_game_example = pyspiel.create_matrix_game(\n",
+    "  [[1.0,-1.0],\n",
+    "  [-1.0,1.0]],\n",
+    "\n",
+    "  [[-1.0,1.0],\n",
+    "  [1.0,-1.0]]\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "print(f\"The name of our normal form game example: {normal_form_game_example}\")\n",
+    "normal_form_game_initial_state = normal_form_game_example.new_initial_state()\n",
+    "print(f\"Printing out the inital state of our normal form game: {normal_form_game_initial_state}\")\n",
+    "print(normal_form_game_initial_state.is_terminal())\n",
+    "\n",
+    "\n",
+    "# apply action, jointly, since normal form games have simultaneous actions\n",
+    "normal_form_game_initial_state.apply_actions([0,1])\n",
+    "print(normal_form_game_initial_state)\n",
+    "print(normal_form_game_initial_state.returns())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346845a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rock Paper Scissors next"
    ]
   }
  ],
