Began working on evolutionary dynamics for RPS

--- a/open_spiel_first_start.ipynb
+++ b/open_spiel_first_start.ipynb
@@ -211,9 +211,48 @@
    "execution_count": null,
    "id": "346845a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix RPS, printed:\n",
+      "matrix_rps()\n",
+      "\n",
+      "Matrix RPS payoffs:\n",
+      "[[[ 0. -1.  1.]\n",
+      "  [ 1.  0. -1.]\n",
+      "  [-1.  1.  0.]]\n",
+      "\n",
+      " [[ 0.  1. -1.]\n",
+      "  [-1.  0.  1.]\n",
+      "  [ 1. -1.  0.]]]\n",
+      "\n",
+      "Matrix RPS dynamics:\n",
+      "<open_spiel.python.egt.dynamics.SinglePopulationDynamics object at 0x10405f2e0>\n",
+      "\n",
+      "[ 0.03 -0.15  0.12]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Rock Paper Scissors next"
+    "# Rock Paper Scissors next\n",
+    "\n",
+    "# We are looking at evolutionary dynamics in OpenSpiel\n",
+    "from open_spiel.python.egt import dynamics\n",
+    "from open_spiel.python.egt.utils import game_payoffs_array\n",
+    "import numpy as np\n",
+    "\n",
+    "matrix_rps = pyspiel.load_matrix_game(\"matrix_rps\")\n",
+    "# get payoffs from the matrix version of this game:\n",
+    "matrix_rps_payoffs = game_payoffs_array(matrix_rps)\n",
+    "print(f\"Matrix RPS, printed:\\n{matrix_rps}\\n\")\n",
+    "print(f\"Matrix RPS payoffs:\\n{matrix_rps_payoffs}\\n\")\n",
+    "\n",
+    "matrix_rps_dynamics = dynamics.SinglePopulationDynamics(matrix_rps_payoffs, dynamics.replicator)\n",
+    "print(f\"Matrix RPS dynamics:\\n{matrix_rps_dynamics}\\n\")\n",
+    "\n",
+    "population_dynamics_weights = np.array([0.1,0.3,0.6]) # heavy weighting towards scissors, less weight to paper, least weight to rock"
    ]
   }
  ],
